# LightGBM

./: .appveyor.yml  .clang-format  .clang-format-ignore  .editorconfig  .envrc  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  .travis.yml  .typos.toml  .vsts-ci.yml  .yamllint.yml  ANALYSIS_SUMMARY_FOR_USER.md  CMakeIntegratedOpenCL.cmake  CMakeLists.txt  CMakeOpenCLPythonPackage.cmake  CMakeOpenCLPythonPackage.txt  CMakeOpenCLPythonPackageCache.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CalcMemorytxt.py  DOCUMENTATION_INDEX.md  DUAL_PACKAGE_SETUP.md  Dockerfile  Dockerfile-base  Dockerfile-cluster  LESSONS  LICENSE  LightGBM.pyproj  MAINTAINING.md  Makefile  Master.progoll  PERFORMANCE_ANALYSIS_AND_NEXT_OPTIMIZATION.md  PERFORMANCE_IMPROVEMENT_PLAN.md  Package.nuspec  README.md  (+56 more)
R-package/: .Rbuildignore  .Rhistory  AUTOCONF_UBUNTU_VERSION  DESCRIPTION  LICENSE  NAMESPACE  README.md  ReadMe.MD  _pkgdown.yml  build_package.R  cleanup  configure  configure.ac  configure.win  cran-comments.md  recreate-configure.sh  unix_build_package.sh  win_build_package.cmd
R-package/R/: aliases.R  callback.R  lgb.Booster.R  lgb.DataProcessor.R  lgb.Dataset.R  lgb.Predictor.R  lgb.convert.R  lgb.convert_with_rules.R  lgb.cv.R  lgb.drop_serialized.R  lgb.importance.R  lgb.interpret.R  lgb.interprete.R  lgb.make_serializable.R  lgb.model.dt.tree.R  lgb.plot.importance.R  lgb.plot.interpretation.R  lgb.plot.tree.R  lgb.prepare.R  lgb.prepare2.R  lgb.prepare_rules.R  lgb.prepare_rules2.R  lgb.restore_handle.R  lgb.train.R  lgb.unloader.R  lightgbm.R  metrics.R  multithreading.R  readRDS.lgb.Booster.R  removed.R  saveRDS.lgb.Booster.R  utils.R  zzz.R
R-package/data/: bank.rda
R-package/demo/: 00Index  README.md  basic_walkthrough.R  boost_from_prediction.R  categorical_features_prepare.R  categorical_features_rules.R  cross_validation.R  early_stopping.R  efficient_many_training.R  leaf_stability.R  multiclass.R  multiclass_custom_objective.R  weight_param.R
R-package/docs/: LICENSE.html  authors.html  index.html
R-package/inst/: make-r-def.R
R-package/man/: agaricus.test.Rd  agaricus.train.Rd  bank.Rd  callbacks.Rd  dim.Rd  dimnames.lgb.Dataset.Rd  getLGBMThreads.Rd  get_field.Rd  getinfo.Rd  lgb.Dataset.Rd  lgb.Dataset.construct.Rd  lgb.Dataset.create.valid.Rd  lgb.Dataset.save.Rd  lgb.Dataset.set.categorical.Rd  lgb.Dataset.set.reference.Rd  lgb.configure_fast_predict.Rd  lgb.convert.Rd  lgb.convert_with_rules.Rd  lgb.cv.Rd  lgb.drop_serialized.Rd  lgb.dump.Rd  lgb.get.eval.result.Rd  lgb.importance.Rd  lgb.interpret.Rd  lgb.interprete.Rd  lgb.load.Rd  lgb.make_serializable.Rd  lgb.model.dt.tree.Rd  lgb.plot.importance.Rd  lgb.plot.interpretation.Rd  lgb.plot.tree.Rd  lgb.prepare.Rd  lgb.prepare2.Rd  lgb.prepare_rules.Rd  lgb.prepare_rules2.Rd  lgb.restore_handle.Rd  lgb.save.Rd  lgb.slice.Dataset.Rd  lgb.train.Rd  lgb.unloader.Rd  (+13 more)
R-package/pkgdown/: _pkgdown.yml  doc_gen.R  extra.js
R-package/src/: Makevars  Makevars.in  Makevars.win  Makevars.win.in  Makevars_fullcode  Makevars_fullcode.win  R_init.c  R_init.h  R_object_helper.h  init.c  install.libs.R  lightgbm-all.cpp  lightgbm-fullcode.cpp  lightgbm-win.def  lightgbm_R.cpp  lightgbm_R.h  make-r-def.R
R-package/tests/: testthat.R
R-package/vignettes/: .gitignore  basic_walkthrough.Rmd  biblio.bib  boost_from_prediction.Rmd  categorical_features_prepare.Rmd  categorical_features_rules.Rmd  cross_validation.Rmd  early_stopping.Rmd  efficient_many_training.Rmd  leaf_stability.Rmd  multiclass.Rmd  test_vignette_1.Rmd  test_vignette_10.Rmd  test_vignette_2.Rmd  test_vignette_3.Rmd  test_vignette_4.Rmd  test_vignette_5.Rmd  test_vignette_6.Rmd  test_vignette_7.Rmd  test_vignette_8.Rmd  test_vignette_9.Rmd  weight_param.Rmd
python-package/: CMakeCache.txt  FAQ.md  MANIFEST.in  Makefile  README.md  README.rst  build.sh  build_pip.py  callback.py  cmake_install.cmake  engine.py  install_python.sh  lightgbm_test.ipynb  pyproject.toml  requirements-dask.txt  requirements-install.txt  setup.cfg  setup.py
python-package/lightgbm/: VERSION.txt  __init__.py  _sklearn_compat.py  arrow.py  basic.py  callback.py  compat.py  dask.py  dask_distributed.py  engine.py  gcForest.py  libpath.py  plotting.py  sklearn.py  sklearn_compat.py
python-package/lightgbm_moe/: __init__.py  basic.py  compat.py  libpath.py  plotting.py  sklearn.py
src/: CMakeLists.txt  c_api.cpp  lightgbm_R.cpp  main.cpp  train.conf
src/application/: application.cpp  predictor.hpp
src/boosting/: bagging.hpp  boosting.cpp  cegb.hpp  dart.cpp  dart.h  dart.hpp  gbdt.cpp  gbdt.cpp.backup  gbdt.h  gbdt_model.cpp  gbdt_model_text.cpp  gbdt_prediction.cpp  goss.hpp  goss1.hpp  mixture_gbdt.cpp  mixture_gbdt.h  mvs.cpp  mvs.hpp  prediction_early_stop.cpp  rf.hpp  rgf.hpp  sample_strategy.cpp  score_updater.hpp
src/cuda/: cuda_algorithms.cu  cuda_common.cu  cuda_utils.cpp  from_git
src/eigen/: .hgignore  CMakeLists.txt  CTestConfig.cmake
src/feature_engineering/: category_feature_count_encoder.cpp  category_feature_encoder.cpp  category_feature_encoder.hpp  category_feature_encoder_manager.cpp  category_feature_target_encoder.cpp  category_feature_target_information_collector.cpp  encoder.hpp
src/io/: bin.cpp  category_encoding_provider.cpp  config.cpp  config_auto.cpp  ctr_provider.cpp  dataset.cpp  dataset_loader.cpp  dense_bin.cpp  dense_bin.hpp  dense_nbits_bin.hpp  file_io.cpp  json11.cpp  metadata.cpp  multi_val_dense_bin.cpp  multi_val_dense_bin.hpp  multi_val_pairwise_lambdarank_bin.hpp  multi_val_sparse_bin.cpp  multi_val_sparse_bin.hpp  ordered_sparse_bin.hpp  pairwise_lambdarank_bin.cpp  pairwise_lambdarank_bin.hpp  pairwise_ranking_feature_group.cpp  parser.cpp  parser.hpp  sparse_bin.cpp  sparse_bin.hpp  template  template.cpp  train_share_states.cpp  tree.cpp
src/metric/: binary_metric.hpp  custom_metric.hpp  dcg_calculator.cpp  map_metric.hpp  metric.cpp  multiclass_metric.hpp  netflix_metric.hpp  rank_metric.hpp  regression_metric.hpp  xentropy_metric.hpp
(+1743 files in other folders)
